--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Эксплуатационная характеристика турбины</title>
 
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="node_modules/reseter.css/css/reseter.min.css" />
+    <script src="node_modules/papaparse/papaparse.min.js"></script>
+    <script src="node_modules/plotly.js-dist-min/plotly.min.js"></script>
 </head>
+
 <body>
     <div id="graph"></div>
-    
+
     <script src="scripts/main.js"></script>
 </body>
+
 </html>
